# BackEnd_ACosmeticos

./: ACosmeticos_bkp.json  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
ACosmeticos/: admin.py  apps.py  models.py  serializers.py  views.py
ACosmeticos/migrations/: 0001_initial.py  0002_initial.py  0002_produto_capa_delete_livro.py  0002_rename_phone_number_cliente_numero_telefone_carrinho.py  0003_alter_itemcarrinho_produto.py  0003_alter_itemcarrinho_produto_alter_produto_descricao_and_more.py  0003_marcas_remove_carrinho_total_alter_cliente_bairro_and_more.py  0003_rename_marcas_marca.py  0004_formapagamento_carrinho.py  0004_itemcarrinho.py  0005_carrinho_total_da_compra_favorito.py  0005_produto_tipo.py  0006_formapagamento.py  0006_remove_produto_tipo.py  0007_alter_cliente_options.py  0007_alter_itemcarrinho_produto.py  0008_cliente_cep_cliente_cpf_alter_produto_marca.py  0008_rename_total_da_compra_carrinho_total_and_more.py  0009_marca_sub_produto.py  0009_produto_quantia_alter_cliente_cep_alter_cliente_cpf.py  0010_compra.py  0010_itemcarrinho_carrinho.py  0011_itemcarrinho_compra_alter_compra_status.py  0011_remove_marca_sub_produto.py  0012_alter_itemcarrinho_compra.py  0012_remove_itemcarrinho_compra_compraitem.py  0013_alter_itemcarrinho_compra.py  0013_remove_carrinho_total_carrinho_status_and_more.py  0014_remove_compraitem_compra_remove_compraitem_produto_and_more.py  0014_remove_produto_idproduto_alter_cliente_cep_and_more.py
config/: settings.py  urls.py
usuario/: models.py
utils/: files.py
(+14 files in other folders)
